Remove border and fix some spacing in teaser block.

--- a/src/theme/blocks/_teaser.scss
+++ b/src/theme/blocks/_teaser.scss
@@ -22,7 +22,6 @@
   .teaser-item.default {
     align-items: start;
     padding-bottom: 40px; // same as vertical spacing in margin-bottom
-    border-bottom: 1px solid $black;
   }
 
   .image-wrapper {
@@ -100,7 +99,7 @@
     }
     h2 {
       margin-top: 0;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       @include text-heading-h2();
       @container (max-width: #{$largest-mobile-screen}) {
         @include text-heading-h3();
